# nsi

./: .gitattributes  .gitattriutes  AGENTS.md  AUDIT.md  CHANGELOG.md  Cargo.toml  LICENSE.md  PIN_ENFORCEMENT_FIXED.md  PIN_ENFORCEMENT_ISSUE.md  README.md  SAFETY_AUDIT_SUMMARY.md  SAFETY_FIXES.md  TODO.md  rustfmt.toml
.github/workflows/: rust.yml
crates/nsi-3delight/: Cargo.toml  README.md
crates/nsi-3delight/examples/interactive/: main.rs
crates/nsi-3delight/examples/jupyter/: jupyter.ipynb
crates/nsi-3delight/examples/output/: main.rs  render.rs
crates/nsi-3delight/examples/volume/: main.rs
crates/nsi-3delight/src/: lib.rs
crates/nsi-core/: Cargo.toml  README.md  build.rs
crates/nsi-core/src/: argument.rs  context.rs  handle_cstring.rs  handle_ustr.rs  lib.rs  node.rs  tests.rs
crates/nsi-core/src/dynamic/: mod.rs
crates/nsi-core/src/linked/: mod.rs
crates/nsi-core/src/output/: mod.rs  pixel_format.rs
crates/nsi-ffi-wrap/: Cargo.toml  README.md
crates/nsi-ffi-wrap/src/: argument.rs  c_adapter.rs  c_api.rs  context.rs  handle.rs  lib.rs  macros.rs  node.rs  nsi_trait.rs  tests.rs  token.rs
crates/nsi-ffi-wrap/src/dynamic/: mod.rs
crates/nsi-ffi-wrap/src/linked/: mod.rs
crates/nsi-ffi-wrap/src/output/: mod.rs  pixel_format.rs  pixel_type.rs
crates/nsi-ffi-wrap/tests/: README.md  generate_test_image.rs  geometry.rs  materials.rs  safety.rs  test_box_layers.rs  test_callback_fix.rs  test_utils.rs
crates/nsi-ffi-wrap/tests/common/: mod.rs
crates/nsi-internal/: Cargo.toml
crates/nsi-internal/src/: lib.rs
crates/nsi-jupyter/: Cargo.toml  README.md
crates/nsi-jupyter/src/: lib.rs
crates/nsi-procedural/: Cargo.toml
crates/nsi-sys/: Cargo.toml  README.md  README.tpl  build.rs
crates/nsi-sys/include/: nsi.h  nsi_procedural.h  wrapper.h
crates/nsi-sys/src/: lib.rs
crates/nsi-toolbelt/: Cargo.toml  README.md
crates/nsi-toolbelt/src/: lib.rs
crates/nsi-trait/: Cargo.toml
crates/nsi-trait/src/: lib.rs  node.rs  nsi_trait.rs
examples/: k-0.20g0.33,0.10mT.exr
examples/exr/: main.rs  render.rs
examples/interactive/: main.rs
examples/jupyter/: jupyter.ipynb
examples/output/: Cargo.toml  main.rs  render.rs
examples/output/src/: main.rs  render.rs
examples/volume/: README.md  main.rs
src/: arg_new.rs  argument.rs  context.rs  lib.rs  test.rs  tests.rs
src/dynamic/: mod.rs
src/linked/: mod.rs
src/output/: jupyter.rs  juypiter.rs  mod.rs  pixel_format.rs
src/toolbelt/: mod.rs
