[package]
name = "nsi"
version = "0.7.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Nodal Scene Interface for (offline) 3D renderers – ɴsɪ."
exclude = [".github/**/*", "crates/**/*", "assets/**/*"]
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[workspace]
members = ["crates/*"]

[features]
default = []
# Specify this to link agains lib3delight
link_lib3delight = ["nsi-core/link_lib3delight"]
# Whether to download a dynamic library version of 3Delight
# if the renderer can't be found locally. The renderer is
# needed as soon as the crate is linked against (e.g. for
# running the tests).
download_lib3delight = ["nsi-core/download_lib3delight"]
# Pixel streaming support.
output = ["nsi-core/output"]
# Jupyter notebooks integration.
jupyter = ["nsi-jupyter"]
# Scene construction helpers.
toolbelt = ["nsi-toolbelt"]
# 3Delight support.
delight = ["nsi-3delight"]
# Nightly/unstable features.
nightly = ["nsi-core/nightly"]
# Ustr handles.
ustr = ["nsi-core/ustr_handles"]

[dependencies]
nsi-3delight = { version = "0.7.0", path = "crates/nsi-3delight", optional = true }
nsi-core = { version = "0.7.0", path = "crates/nsi-core" }
nsi-jupyter = { version = "0.7.0", path = "crates/nsi-jupyter", optional = true }
nsi-toolbelt = { version = "0.7.0", path = "crates/nsi-toolbelt", optional = true }

[dev-dependencies]
dl-openvdb-query = "0.1"
exr = "1.6.3"
nsi-3delight = { version = "0.7.0", path = "crates/nsi-3delight" }
nsi-toolbelt = { version = "0.7.0", path = "crates/nsi-toolbelt" }
png = "0.17.8"
polyhedron-ops = { version = "0.2.6", path = "../polyhedron-ops", features = ["nsi"] }

[[example]]
path = "examples/interactive/main.rs"
name = "interactive"

[[example]]
path = "examples/output/main.rs"
name = "output"
required-features = ["output"]

[[example]]
path = "examples/volume/main.rs"
name = "volume"

[package.metadata.docs.rs]
features = ["jupyter", "output", "toolbelt", "delight", "nightly"]
