[package]
name = "nsi"
version = "0.8.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Nodal Scene Interface for (offline) 3D renderers – ɴsɪ."
exclude = [".github/**/*", "crates/**/*", "assets/**/*", "examples/**/*"]
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[workspace]
members = ["crates/*"]

[features]
default = []
# Specify this to link agains lib3delight
link_lib3delight = ["nsi-ffi-wrap/link_lib3delight"]
# Whether to download a dynamic library version of 3Delight
# if the renderer can't be found locally. The renderer is
# needed as soon as the crate is linked against (e.g. for
# running the tests).
download_lib3delight = ["nsi-ffi-wrap/download_lib3delight"]
# Pixel streaming support.
output = ["nsi-ffi-wrap/output"]
# Jupyter notebooks integration.
jupyter = ["nsi-jupyter"]
# Scene construction helpers.
toolbelt = ["nsi-toolbelt"]
# 3Delight support.
delight = ["nsi-3delight"]
# Nightly/unstable features.
nightly = ["nsi-ffi-wrap/nightly"]
# Ustr handles.
ustr = ["nsi-ffi-wrap/ustr_handles"]

[dependencies]
nsi-3delight = { version = "0.8", path = "crates/nsi-3delight", optional = true }
nsi-ffi-wrap = { version = "0.8", path = "crates/nsi-ffi-wrap" }
nsi-jupyter = { version = "0.8", path = "crates/nsi-jupyter", optional = true }
nsi-toolbelt = { version = "0.8", path = "crates/nsi-toolbelt", optional = true }
nsi-trait = { version = "0.2", path = "crates/nsi-trait" }

[dev-dependencies]
dl-openvdb-query = "0.1"
exr = "1"
nsi-3delight = { version = "0.8", path = "crates/nsi-3delight" }
nsi-toolbelt = { version = "0.8", path = "crates/nsi-toolbelt" }
png = "0.17"

[dev-dependencies.polyhedron-ops]
#path = "../polyhedron-ops"
version = "0.2"
features = ["nsi"]

[[example]]
path = "examples/interactive/main.rs"
name = "interactive"

[[example]]
path = "examples/output/main.rs"
name = "output"
required-features = ["output"]

[[example]]
path = "examples/volume/main.rs"
name = "volume"

[package.metadata.docs.rs]
features = ["download_lib3delight", "jupyter", "output", "toolbelt", "delight", "nightly"]
