[package]
name = "nsi-3delight"
version = "0.7.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "3delight"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Nodal Scene Interface (ɴsɪ) helpers for the 3Delight renderer."
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi-3delight/"
repository = "https://github.com/virtualritz/nsi-3delight/"

[dependencies]
nsi-core = { version = "0.7.0", path = "../nsi-core" }
nsi-toolbelt = { version = "0.7.0", path = "../nsi-toolbelt" }
