[package]
name = "nsi-core"
version = "0.6.1"
authors = ["Moritz Moeller <virtualritz@gmail.com>"]
edition = "2018"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Nodal Scene Interface for (offline) 3D renderers – ɴsɪ."
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[features]
default = ["dlopen_derive", "dlopen"]
# Specify this to link agains lib3delight
link_lib3delight = ["nsi-sys/link_lib3delight", "ndspy-sys/link_lib3delight"]
# Whether to download a dynamic library version of 3Delight
# if the renderer can't be found locally. The renderer is
# needed as soon as the crate is linked against (e.g. for
# running the tests).
download_lib3delight = ["nsi-sys/download_lib3delight"]
# Pixel streaming support.
output = ["ndspy-sys"]
# Nightly/unstable features.
nightly = []

[dependencies]
enum_dispatch = "0.3.5"
lazy_static = "1.4.0"
num_enum = "0.5.1"
nsi-sys = "0.1.13"
# Optional (feature) deps.
bytemuck = { version = "1.5.0", optional = true }
dlopen = { version = "0.1.8", optional = true }
dlopen_derive = { version = "0.1.4", optional = true }
ndspy-sys = { version = "0.2.1", optional = true }