[package]
name = "nsi-core"
version = "0.7.2"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Nodal Scene Interface for (offline) 3D renderers – ɴsɪ."
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[features]
default = ["dlopen2"]
# Specify this to link agains lib3delight
link_lib3delight = []
# Whether to download a dynamic library version of 3Delight
# if the renderer can't be found locally. The renderer is
# needed as soon as the crate is linked against (e.g. for
# running the tests).
download_lib3delight = ["reqwest"]
# Pixel streaming support.
output = ["ndspy-sys"]
# Nightly/unstable features.
nightly = []
# Use Ustr cache for handles too
ustr_handles = []

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"], optional = true }

[dependencies]
dlopen2 = { version = "0.5", optional = true }
enum_dispatch = "0.3"
lazy_static = "1.4"
log = "0.4.17"
ndspy-sys = { version = "0.2", optional = true }
nsi-sys = { version = "0.7", path = "../nsi-sys" }
null-terminated-str = "0.1.4"
num_enum = "0.6"
rclite = "0.2"
ustr = "0.9"

[package.metadata.docs.rs]
features = ["download_lib3delight", "output", "toolbelt", "delight", "jupyter"]
