[package]
name = "nsi-internal"
version = "0.6.1"
authors = ["Moritz Moeller <virtualritz@gmail.com>"]
edition = "2018"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description", "nsi"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Nodal Scene Interface for (offline) 3D renderers – ɴsɪ."
exclude = [".github/**/*", "crates/**/*"]
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[dependencies]
# Jupyter notebooks integration.
nsi-jupyter = { path ="../nsi-jupyter", optional = true }
# Scene construction helpers.
nsi-toolbelt = { path ="../nsi-toolbelt", optional = true }
# 3Delight support.
nsi-3delight = { path ="../nsi-3delight", optional = true }
