[package]
name = "nsi-internal"
version = "0.6.1"
authors = ["Moritz Moeller <virtualritz@gmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description", "nsi"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Meta crate wrapping all optional helper crates for the ɴsɪ ecosystem."
exclude = [".github/**/*"]
readme = "README.md"
homepage = "https://nsi.readthedocs.io/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[dependencies]
# Jupyter notebooks integration.
nsi-jupyter = { path ="../nsi-jupyter", optional = true }
# Scene construction helpers.
nsi-toolbelt = { path ="../nsi-toolbelt", optional = true }
# 3Delight support.
nsi-3delight = { path ="../nsi-3delight", optional = true }
