[package]
name = "nsi-jupyter"
version = "0.7.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Jypyter notebooks support for ɴsɪ."
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[dependencies]
nsi-core = { path = "../nsi-core", features = ["output"] }
base64 = "0.21.0"
bytemuck = "1.13.1"
evcxr_runtime = "1.1.0"
png = "0.17.7"
rayon = "1.7.0"
