[package]
name = "nsi-jupyter"
version = "0.8.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Jypyter notebooks support for ɴsɪ."
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[dependencies]
base64 = "0.22"
bytemuck = "1.14"
evcxr_runtime = "1.1"
nsi-core = { version = "0.8", path = "../nsi-core", features = ["output"] }
png = "0.17"
rayon = "1.8"

[package.metadata.docs.rs]
all-features = true