[package]
name = "nsi-toolbelt"
version = "0.8.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Nodal Scene Interface for (offline) 3D renderers – ɴsɪ."
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/nsi/"
repository = "https://github.com/virtualritz/nsi/"

[dependencies]
nsi-ffi-wrap = { version = "0.8", path = "../nsi-ffi-wrap" }
petname = { version = "1", default-features = false, features = ["std_rng", "default_dictionary"] }
rand = { version = "0.8", features = ["small_rng"] }
ultraviolet = { version = "0.9", features = ["f64"] }

[package.metadata.docs.rs]
all-features = true
